contact us edited

--- a/index.html
+++ b/index.html
@@ -354,41 +354,44 @@
                         <div
                             class="flex flex-col items-center justify-center p-5 bg-gray-200 text-center space-y-5 border-1 border-gray-400 border-t-0 border-l-0">
                             <img src="images/location.png" alt="">
-                            <div>
+                            <div class="space-y-2">
                                 <h1 class="text-xl font-bold">Address</h1>
-                                <p>A108 Adam Street,</p>
-                                <p>New York, NY 535022</p>
+                                <div><p>A108 Adam Street,</p>
+                                    <p>New York, NY 535022</p></div>
                             </div>
 
                         </div>
 
                         <div
                             class="flex flex-col items-center justify-center p-5 bg-gray-200 text-center space-y-5 border-1 border-gray-400 border-t-0 border-r-0">
-                            <img src="images/location.png" alt="">
-                            <div>
-                                <h1 class="text-xl font-bold">Address</h1>
-                                <p>A108 Adam Street,</p>
-                                <p>New York, NY 535022</p>
+                            <img src="images/call.png" alt="">
+                            <div class="space-y-2">
+                                <h1 class="text-xl font-bold">Call Us</h1>
+                                <div><p>+8801580912090</p>
+                                    <p>+2130020662536</p></div>
                             </div>
 
                         </div>
                         <div
                             class="flex flex-col items-center justify-center p-5 bg-gray-200 text-center space-y-5 border-1 border-gray-400 border-b-0 border-l-0">
-                            <img src="images/location.png" alt="">
-                            <div>
-                                <h1 class="text-xl font-bold">Address</h1>
-                                <p>A108 Adam Street,</p>
-                                <p>New York, NY 535022</p>
+                            <img src="images/email.png" alt="">
+                            <div class="space-y-2">
+                                <h1 class="text-xl font-bold">Email Us</h1>
+                                <div><p>mdselimreza2066@gmail.com</p>
+                                    <p>213002066@student.green.edu.bd</p></div>
                             </div>
 
                         </div>
                         <div
                             class="flex flex-col items-center justify-center p-5 bg-gray-200 text-center space-y-5 border-1 border-gray-400 border-b-0 border-r-0">
-                            <img src="images/location.png" alt="">
-                            <div>
-                                <h1 class="text-xl font-bold">Address</h1>
-                                <p>A108 Adam Street,</p>
-                                <p>New York, NY 535022</p>
+                            <img src="images/time.png" alt="">
+                            <div class="space-y-2">
+                                <h1 class="text-xl font-bold">Working Hour</h1>
+                                <div>
+                                    <p>Mon-Thu: 9AM to 5PM
+                                    </p>
+                                <p>Sunday: 9AM to 1 PM</p>
+                                </div>
                             </div>
 
                         </div>
