responsive lil bit contact with us part

--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
     </header>
 
     <!-- main -->
-    <main class="ml-10 mr-10 lg:max-w-screen-xl md:mx-auto md:max-w-screen-lg  mt-30 mb-20">
+    <main class=" ml-10 mr-10 lg:max-w-screen-xl md:mx-auto md:max-w-screen-lg  mt-30 mb-20">
 
         <!-- Heading -->
         <div class="text-center space-y-5">
@@ -271,154 +271,157 @@
             </div>
             </div>
 
-            <!-- frequently Asked Questions -->
-            <section class="mt-20">
-                <!-- txt part -->
-                <div class="text-center  space-y-5">
-                    <h1 class="text-green-950 text-3xl font-bold">Frequently Asked Any Questions</h1>
-                    <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered
-                        <br>
-                        alteration in some form, by injected humour.
-                    </p>
+           
+
+        </section>
+
+         <!-- frequently Asked Questions -->
+         <section class="mt-20">
+            <!-- txt part -->
+            <div class="text-center  space-y-5">
+                <h1 class="text-green-950 text-3xl font-bold">Frequently Asked Any Questions</h1>
+                <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered
+                    <br>
+                    alteration in some form, by injected humour.
+                </p>
+            </div>
+
+            <!-- Accordion -->
+            <div
+                class="mt-10 md:flex gap-5 justify-between hover:bg-yellow-600 transition ease-out duration-200000000">
+                <!--  -->
+                <div class="space-y-10 h-[579px] ">
+                    <div
+                        class="collapse collapse-plus bg-base-100 border border-base-300 hover:bg-yellow-600 transition ease-out duration-2000">
+                        <input type="radio" name="my-accordion-3" checked="checked" />
+                        <div class="collapse-title font-semibold">How do I create an account?</div>
+                        <div class="collapse-content text-sm">Click the "Sign Up" button in the top right corner and
+                            follow the registration process.</div>
+                    </div>
+                    <div
+                        class="collapse collapse-plus bg-base-100 border border-base-300 hover:bg-yellow-600 transition ease-out duration-2000">
+                        <input type="radio" name="my-accordion-3" />
+                        <div class="collapse-title font-semibold">I forgot my password. What should I do?</div>
+                        <div class="collapse-content text-sm">Click on "Forgot Password" on the login page and
+                            follow the instructions sent to your email.</div>
+                    </div>
+                    <div
+                        class="collapse collapse-plus bg-base-100 border border-base-300 hover:bg-yellow-600 transition ease-out duration-2000">
+                        <input type="radio" name="my-accordion-3" />
+                        <div class="collapse-title font-semibold">How do I update my profile information?</div>
+                        <div class="collapse-content text-sm">Go to "My Account" settings and select "Edit Profile"
+                            to make changes.</div>
+                    </div>
+                    <div
+                        class="collapse collapse-plus bg-base-100 border border-base-300 hover:bg-yellow-600 transition ease-out duration-2000">
+                        <input type="radio" name="my-accordion-3" />
+                        <div class="collapse-title font-semibold">How do I update my profile information?</div>
+                        <div class="collapse-content text-sm">Go to "My Account" settings and select "Edit Profile"
+                            to make changes. Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus,
+                            eaque.</div>
+                    </div>
+                    <div
+                        class="collapse collapse-plus bg-base-100 border border-base-300 hover:bg-yellow-600 transition ease-out duration-2000">
+                        <input type="radio" name="my-accordion-3" />
+                        <div class="collapse-title font-semibold">How do I update my profile information?</div>
+                        <div class="collapse-content text-sm">Go to "My Account" settings and select "Edit Profile"
+                            to make changes. Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus,
+                            eaque.</div>
+                    </div>
+
                 </div>
 
-                <!-- Accordion -->
-                <div
-                    class="mt-10 md:flex gap-5 justify-between hover:bg-yellow-600 transition ease-out duration-200000000">
-                    <!--  -->
-                    <div class="space-y-10 h-[579px] ">
-                        <div
-                            class="collapse collapse-plus bg-base-100 border border-base-300 hover:bg-yellow-600 transition ease-out duration-2000">
-                            <input type="radio" name="my-accordion-3" checked="checked" />
-                            <div class="collapse-title font-semibold">How do I create an account?</div>
-                            <div class="collapse-content text-sm">Click the "Sign Up" button in the top right corner and
-                                follow the registration process.</div>
-                        </div>
-                        <div
-                            class="collapse collapse-plus bg-base-100 border border-base-300 hover:bg-yellow-600 transition ease-out duration-2000">
-                            <input type="radio" name="my-accordion-3" />
-                            <div class="collapse-title font-semibold">I forgot my password. What should I do?</div>
-                            <div class="collapse-content text-sm">Click on "Forgot Password" on the login page and
-                                follow the instructions sent to your email.</div>
-                        </div>
-                        <div
-                            class="collapse collapse-plus bg-base-100 border border-base-300 hover:bg-yellow-600 transition ease-out duration-2000">
-                            <input type="radio" name="my-accordion-3" />
-                            <div class="collapse-title font-semibold">How do I update my profile information?</div>
-                            <div class="collapse-content text-sm">Go to "My Account" settings and select "Edit Profile"
-                                to make changes.</div>
-                        </div>
-                        <div
-                            class="collapse collapse-plus bg-base-100 border border-base-300 hover:bg-yellow-600 transition ease-out duration-2000">
-                            <input type="radio" name="my-accordion-3" />
-                            <div class="collapse-title font-semibold">How do I update my profile information?</div>
-                            <div class="collapse-content text-sm">Go to "My Account" settings and select "Edit Profile"
-                                to make changes. Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus,
-                                eaque.</div>
-                        </div>
-                        <div
-                            class="collapse collapse-plus bg-base-100 border border-base-300 hover:bg-yellow-600 transition ease-out duration-2000">
-                            <input type="radio" name="my-accordion-3" />
-                            <div class="collapse-title font-semibold">How do I update my profile information?</div>
-                            <div class="collapse-content text-sm">Go to "My Account" settings and select "Edit Profile"
-                                to make changes. Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus,
-                                eaque.</div>
+
+                <!-- img part -->
+
+                <div>
+                    <img src="images/faq.png" class="h-[579px] w-[570px] object-cover" alt="">
+                </div>
+            </div>
+
+        </section>
+
+        <!-- contact with us -->
+        <section class="mt-20">
+            <div class="text-center  space-y-5">
+                <h1 class="text-green-950 text-3xl font-bold">Contact With Us</h1>
+                <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered
+                    <br>
+                    alteration in some form, by injected humour.
+                </p>
+            </div>
+
+            <!-- grid flex -->
+             
+            <div class="mt-10 md:max-w-[1170px] mx-auto  flex flex-col items-center md:flex-row justify-between gap-10 ">
+                <!-- grid -->
+                <div class="grid grid-cols-2 flex-grow ">
+                    <div
+                        class="flex flex-col items-center justify-center p-5 bg-gray-100 text-center space-y-5 border-1 border-gray-300 border-t-0 border-l-0">
+                        <img src="images/location.png" alt="">
+                        <div class="space-y-2">
+                            <h1 class="text-xl font-bold">Address</h1>
+                            <div><p>A108 Adam Street,</p>
+                                <p>New York, NY 535022</p></div>
                         </div>
 
                     </div>
 
+                    <div
+                        class="flex flex-col items-center justify-center p-5 bg-gray-100 text-center space-y-5 border-1 border-gray-300 border-t-0 border-r-0">
+                        <img src="images/call.png" alt="">
+                        <div class="space-y-2">
+                            <h1 class="text-xl font-bold">Call Us</h1>
+                            <div><p>+8801580912090</p>
+                                <p>+2130020662536</p></div>
+                        </div>
 
-                    <!-- img part -->
+                    </div>
+                    <div
+                        class="flex flex-col items-center justify-center p-5 bg-gray-100 text-center space-y-5 border-1 border-gray-300 border-b-0 border-l-0">
+                        <img src="images/email.png" alt="">
+                        <div class="space-y-2">
+                            <h1 class="text-xl font-bold">Email Us</h1>
+                            <div><p>mdselimreza2066@gmail.com</p>
+                                <p>213002066@student.green.edu.bd</p></div>
+                        </div>
 
-                    <div>
-                        <img src="images/faq.png" class="h-[579px] w-[570px] object-cover" alt="">
+                    </div>
+                    <div
+                        class="flex flex-col items-center justify-center p-5 bg-gray-100 text-center space-y-5 border-1 border-gray-300 border-b-0 border-r-0">
+                        <img src="images/time.png" alt="">
+                        <div class="space-y-2">
+                            <h1 class="text-xl font-bold">Working Hour</h1>
+                            <div>
+                                <p>Mon-Thu: 9AM to 5PM
+                                </p>
+                            <p>Sunday: 9AM to 1 PM</p>
+                            </div>
+                        </div>
+
                     </div>
                 </div>
+                <!-- flex -->
+                <div class="w-full md:w-1/2">
+                    <fieldset class="fieldset w-full  rounded-box space-y-3 ">
 
-            </section>
 
-            <!-- contact with us -->
-            <section class="mt-20">
-                <div class="text-center  space-y-5">
-                    <h1 class="text-green-950 text-3xl font-bold">Contact With Us</h1>
-                    <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered
-                        <br>
-                        alteration in some form, by injected humour.
-                    </p>
+                        <input type="tel" class="input w-full bg-gray-100 border-none" placeholder="Your Name" />
+
+
+                        <input type="email" class="input w-full bg-gray-100 border-none" placeholder="Email" />
+
+
+                        <input type="text" class="input w-full bg-gray-100 border-none" placeholder="Subject" />
+
+
+                        <textarea class="bg-gray-100 border-none w-full h-30 p-4 text-sm  resize-none rounded-md"
+                            placeholder="Your Message"></textarea>
+                        <button class="btn btn-neutral mt-4 bg-[#B68C5A] border-0 text-white text-lg ">Send
+                            Message</button>
+                    </fieldset>
                 </div>
-
-                <!-- grid flex -->
-                <div class="mt-10 max-w-[1170px] mx-auto max-h-[570px] md:flex justify-between gap-10">
-                    <!-- grid -->
-                    <div class="grid grid-cols-2 flex-grow ">
-                        <div
-                            class="flex flex-col items-center justify-center p-5 bg-gray-200 text-center space-y-5 border-1 border-gray-400 border-t-0 border-l-0">
-                            <img src="images/location.png" alt="">
-                            <div class="space-y-2">
-                                <h1 class="text-xl font-bold">Address</h1>
-                                <div><p>A108 Adam Street,</p>
-                                    <p>New York, NY 535022</p></div>
-                            </div>
-
-                        </div>
-
-                        <div
-                            class="flex flex-col items-center justify-center p-5 bg-gray-200 text-center space-y-5 border-1 border-gray-400 border-t-0 border-r-0">
-                            <img src="images/call.png" alt="">
-                            <div class="space-y-2">
-                                <h1 class="text-xl font-bold">Call Us</h1>
-                                <div><p>+8801580912090</p>
-                                    <p>+2130020662536</p></div>
-                            </div>
-
-                        </div>
-                        <div
-                            class="flex flex-col items-center justify-center p-5 bg-gray-200 text-center space-y-5 border-1 border-gray-400 border-b-0 border-l-0">
-                            <img src="images/email.png" alt="">
-                            <div class="space-y-2">
-                                <h1 class="text-xl font-bold">Email Us</h1>
-                                <div><p>mdselimreza2066@gmail.com</p>
-                                    <p>213002066@student.green.edu.bd</p></div>
-                            </div>
-
-                        </div>
-                        <div
-                            class="flex flex-col items-center justify-center p-5 bg-gray-200 text-center space-y-5 border-1 border-gray-400 border-b-0 border-r-0">
-                            <img src="images/time.png" alt="">
-                            <div class="space-y-2">
-                                <h1 class="text-xl font-bold">Working Hour</h1>
-                                <div>
-                                    <p>Mon-Thu: 9AM to 5PM
-                                    </p>
-                                <p>Sunday: 9AM to 1 PM</p>
-                                </div>
-                            </div>
-
-                        </div>
-                    </div>
-                    <!-- flex -->
-                    <div class="w-1/2">
-                        <fieldset class="fieldset w-full  rounded-box space-y-3 ">
-
-
-                            <input type="tel" class="input w-full bg-gray-100 border-none" placeholder="Your Name" />
-
-
-                            <input type="email" class="input w-full bg-gray-100 border-none" placeholder="Email" />
-
-
-                            <input type="text" class="input w-full bg-gray-100 border-none" placeholder="Subject" />
-
-
-                            <textarea class="bg-gray-100 border-none w-full h-40 p-4 text-sm  resize-none rounded-md"
-                                placeholder="Your Message"></textarea>
-                            <button class="btn btn-neutral mt-4 bg-[#B68C5A] border-0 text-white text-lg ">Send
-                                Message</button>
-                        </fieldset>
-                    </div>
-                </div>
-            </section>
-
+            </div>
         </section>
 
 
@@ -466,8 +469,8 @@
                             <input type="text" placeholder="Enter your email address"
                                 class="input input-bordered join-item text-amber-900" />
 
-                            <button class="btn btn-active   bg-amber-600 rounded-r-lg border-none"><i
-                                    class="fa-sharp fa-solid fa-paper-plane text-lg "
+                            <button class="btn btn-active   bg-amber-600 rounded-r-lg border-none  hover:bg-green-600 transform duration-700"><i
+                                    class="fa-sharp fa-solid fa-paper-plane text-lg hover:translate-x-85 hover:-translate-y-35 hover:rotate-18 duration-2000"
                                     style="color: #fbfbfc;"></i></button>
 
 
