--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
         </div>
 
         <!-- grid section -->
-        <section class="grid grid-cols-3 gap-0 mt-20">
+        <section class="grid md:grid-cols-3 gap-0 mt-20">
             <div
                 class="text-center  flex flex-col items-center justify-center   border border-gray-200 p-8 border-t-0 border-l-0">
                 <img src="images/business.png" alt="">
@@ -431,7 +431,7 @@
 
 
     <footer class="bg-black">
-        <footer class="footer flex justify-between md:max-w-screen-xl  text-white mx-auto p-10">
+        <footer class="footer sm:flex sm:flex-col justify-center items-center md:flex md:flex-row md:justify-between  md:max-w-screen-xl  text-white mx-auto p-10">
 
             <nav class="w-[259px]">
                 <h6 class="footer-title flex"> <img src="images/logo.png" alt=""></h6>
